# hermes-tailchat

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  renovate.json  tailchat.db
.beads/: config.yaml  issues.jsonl
.github/: pull_request_template.md
.github/workflows/: ci.yml
.hermes/: c4-lite.md  model-practice-rules.md  modeling-hypothesis.md  run-approval-trust-sequence.md
app/: broker.py  codex_runner.py  codex_sanitizer.py  config.py  dreaming.py  hermes_api.py  hermes_provider.py  main.py  overlay.py  retry_policy.py  store.py  untrusted_ingest.py
app/static/: index.html
app/swyx_ingest/: __init__.py  extract.py  skill_draft.py  sources.py  spool.py
config/: x-billing-plan.example.json  x-watchlist.example.json
docs/: architecture.md
hermes_tailchat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: deploy-local.sh  hermes_dream.py  hermes_overlay_report.py  install-hermes-dream.sh  install-hermes-motd.sh  install-local-autodeploy.sh  realtime_audio_probe.py  render_hermes_motd.py  review_requirements.py  run_codex_background.py  ship-pr.sh  swyx_to_skills.py  traceability_report.py  untrusted_codex_sanitize.py  untrusted_ingest.py  x_monitor.py
systemd/: hermes-tailchat-deploy.path  hermes-tailchat-deploy.service  hermes-tailchat-dream.service  hermes-tailchat-dream.timer
tests/: test_codex_background.py  test_codex_sanitizer.py  test_dreaming_tools.py  test_multi_agent_design_artifacts.py  test_smoke.py  test_swyx_ingest.py  test_traceability_and_mobile_layout.py  test_untrusted_ingest.py  test_x_monitor.py
(+46 files in other folders)
