[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-tailchat"
version = "0.1.0"
description = "Tailnet-only chat UI for a local Hermes backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "httpx>=0.28,<1",
  "sse-starlette>=2.1,<3",
  "pydantic>=2.11,<3",
]

[tool.setuptools]
packages = ["app"]
include-package-data = true
