[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-tailchat"
version = "0.1.0"
description = "Tailnet-only chat UI for a local Hermes backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
  "httpx>=0.28",
  "sse-starlette>=2.1",
  "pydantic>=2.11",
]


[project.optional-dependencies]
dev = [
  "pytest>=9",
  "httpx2>=2.5",
]

[tool.setuptools]
packages = ["app", "app.x_monitor"]
include-package-data = true
